testsuite/bsc.real/evaluator/errors/LogBaseZero.bsv.bsc-vcomp-out.expected
checking package dependencies
compiling LogBaseZero.bsv
code generation for sysLogBaseZero starts
Error: "LogBaseZero.bsv", line 3, column 14: (G0110)
  A logarithm operator was applied to a non-positive base during elaboration.
  During elaboration of the body of rule `r' at "LogBaseZero.bsv", line 5,
  column 10.
  During elaboration of `sysLogBaseZero' at "LogBaseZero.bsv", line 2, column
  8.
